# Hodos-Browser

./: .gitattributes  .gitignore  ARCHITECTURE.md  ASSESSMENT_REPORT.md  BRC100_IMPLEMENTATION_GUIDE.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  COPYRIGHT  Developer_notes.md  FEATURES.md  GIT_WORKFLOW_GUIDE.md  HANDOFF.md  HELIOPS_AUDIT_BRIEF.md  Hodos_Build_Windows.md  IMPLEMENTATION_STATUS.md  LICENSE  MACOS_PORT_SUCCESS.md  PROJECT_OVERVIEW.md  README.md  SECURITY_AND_PROCESS_ISOLATION_ANALYSIS.md  TAB_TESTING_GUIDE.md  TECH_STACK_INTEGRATION.md  THE_WHY.md  TRANSACTION_IMPLEMENTATION_GUIDE.md  UX_FEATURE_COMPARISON_AND_ROADMAP.md  WALLET_ARCHITECTURE.md  appcast.xml  dev-adblock.ps1  dev-adblock.sh  dev-wallet.ps1  dev-wallet.sh  kill-browser.sh
adblock-engine/: Cargo.toml  build.rs
adblock-engine/src/: CLAUDE.md  engine.rs  handlers.rs  hodos-unbreak.txt  main.rs
adblock-engine/src/scriptlets/: CLAUDE.md  json_prune_fetch_response.js  json_prune_xhr_response.js  remove_node_text.js  trusted_replace_fetch_response.js  trusted_replace_node_text.js  trusted_replace_xhr_response.js
cef-native/: CLAUDE.md  CMakeLists.txt  CROSS_PLATFORM_GUIDE.md  Info.plist  OverlayHelpers_mac.h  OverlayHelpers_mac.mm  PHASE1_MODIFICATIONS.md  cef_browser_shell.cpp  cef_browser_shell_mac.mm  hodos.manifest  hodos.rc  mac_build_run.sh  run_debug.sh  startup_log.txt  win_build_run.ps1  win_build_run.sh  win_run.ps1
cef-native/build_tools/: generate-qr-header.js  jsqr.min.js  qr-scanner-logic.js
cef-native/include/core/: AdblockCache.h  AddressHandler.h  AppPaths.h  AutoUpdater.h  BRC100Bridge.h  BRC100Handler.h  BookmarkManager.h  BrowserWindow.h  CLAUDE.md  CWIShimScript.h  CachedContentResourceHandler.h  CookieBlockManager.h  CookieManager.h  EngineShadow.h  EphemeralCookieManager.h  FingerprintProtection.h  FingerprintScript.h  GoogleSuggestService.h  HistoryManager.h  HttpRequestInterceptor.h  IdentityHandler.h  JsStringEscape.h  LayoutHelpers.h  LocalFileResourceHandler.h  Logger.h  ManifestFetcher.h  NavigationHandler.h  PaidContentCache.h  PendingAuthRequest.h  PendingPermissionRequest.h  PermissionEngine.h  PermissionGate.h  PortConfig.h  ProfileImporter.h  ProfileLock.h  ProfileManager.h  QRScannerScript.h  QRScreenCapture.h  SensitiveCertFields.h  SessionManager.h  (+15 more)
cef-native/include/handlers/: CLAUDE.md  my_overlay_render_handler.h  simple_app.h  simple_handler.h  simple_render_process_handler.h
cef-native/include/platform/: platform_window.h
cef-native/mac/: entitlements.plist  generate-icon.sh  helper-Info.plist.in  process_helper_mac.mm
cef-native/src/core/: AddressHandler.cpp  AutoUpdater.cpp  AutoUpdater_mac.mm  BRC100Bridge.cpp  BRC100Handler.cpp  BookmarkManager.cpp  BrowserWindow.cpp  CLAUDE.md  CookieBlockManager.cpp  CookieManager.cpp  DefaultTrackerList.h  EngineShadow.cpp  EphemeralCookieManager.cpp  GoogleSuggestService.cpp  HistoryManager.cpp  HttpRequestInterceptor.cpp  IdentityHandler.cpp  Logger.cpp  ManifestFetcher.cpp  NavigationHandler.cpp  PaidContentCache.cpp  PermissionEngine.cpp  PermissionGate.cpp  ProfileImporter.cpp  ProfileLock.cpp  ProfileManager.cpp  QRScreenCapture.cpp  SessionManager.cpp  SettingsManager.cpp  SilentStateWriter.cpp  SingleInstance.cpp  SitePermissionStore.cpp  SyncHttpClient.cpp  TabManager.cpp  TabManager_mac.mm  TaskbarProfile.cpp  UpdateApply.cpp  UpdateFs.cpp  UpdateStager.cpp  WalletService.cpp  (+4 more)
cef-native/src/handlers/: CLAUDE.md  my_overlay_render_handler.cpp  my_overlay_render_handler.mm  simple_app.cpp  simple_handler.cpp  simple_handler_mac.mm  simple_render_process_handler.cpp
cef-native/tests/: CLAUDE.md  CMakeLists.txt  js_string_escape_test.cpp  manifest_fetcher_test.cpp  permission_engine_test.cpp  permission_gate_test.cpp  profile_id_test.cpp  sensitive_cert_fields_test.cpp  silent_state_writer_test.cpp  update_apply_test.cpp  update_fs_test.cpp  update_stager_test.cpp
cef-native/update-helper/: main.cpp  splash.h  transaction.cpp  transaction.h
rust-wallet/: .gitignore  BEEF_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  PUSHDROP_TEST_RESULTS.md  build.rs  delete_db.ps1  test_actions.ps1  test_labels.ps1  test_pushdrop_strategy.md
rust-wallet/HodosBrowser/wallet/: wallet.db
rust-wallet/archive/: README.md
rust-wallet/archive/old-tests/: CLAUDE.md  certificate_decryption_test.rs  csr_json_serialization_test.rs  interoperability_test.rs
rust-wallet/archive/test-scripts/: CLAUDE.md  analyze_csr_body.js  capture_header_values.js  capture_metanet_requests.js  capture_proxy.mjs  compare_csr_bytes.js  compare_csr_with_ts_sdk.js  csr_byte_comparison_test.rs  csr_serialization_ts_sdk.json  decode_hex.js  delete_db.ps1  extract_and_compare.js  extract_key.ps1  find_csr_difference.js  generate_working_csr.js  parse_and_compare_headers.js  pushdrop_test_vectors.json  test_acquire_certificate.ps1  test_acquire_certificate.sh  test_actions.ps1  test_against_server.mjs  test_authfetch_headers.js  test_base64_decode.js  test_beef_phase2.ps1  (+37 more)
rust-wallet/src/: CLAUDE.md  action_storage.rs  arc_status.rs  arc_status_poller.rs  auth_session.rs  authfetch.rs  backup.rs  balance_cache.rs  beef.rs  beef_ancestors.rs  beef_helpers.rs  cache_errors.rs  cache_helpers.rs  cache_sync.rs  domain_whitelist.rs  fee_rate_cache.rs  handlers.rs  identity_resolver.rs  json_storage.rs  lib.rs  main.rs  manifest.rs  message_relay.rs  messagebox.rs  overlay.rs  paymail.rs  price_cache.rs  reconcile.rs  recovery.rs  utxo_fetcher.rs  utxo_sync.rs  utxo_validation.rs
rust-wallet/tests/: CLAUDE.md  FIRST_RUN_DIAGNOSTIC.md  FULL_TEST_SUITE_RESULTS_2026-03-01.md  README.md  beef_crypto_cert_test.rs  certificate_decryption_test.rs  diagnostic_test.rs  sdk_interop_test.rs  sighash_transaction_test.rs  tier10_cert_verify_beef_validate_test.rs  tier11_final_coverage_test.rs  tier12_brc121_pay_402_test.rs  tier3_edge_recovery_test.rs  tier4_protocol_integration_test.rs  tier5_coverage_hardening_test.rs  tier6_protocol_vectors_test.rs  tier7_boundary_coverage_test.rs  tier8_types_recovery_storage_test.rs  tier9_beef_struct_serde_test.rs
(+813 files in other folders)
