[package]
name = "hodos-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
actix-web = "4.9"
actix-cors = "0.7"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directory helpers
dirs = "5.0"

# Random number generation
rand = "0.8"
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Crypto libraries (self-contained, no external wallet-core dependency)
secp256k1 = { version = "0.28", features = ["rand-std"] }
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
hmac = "0.12"
hex = "0.4"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"

# HD Wallet (BIP39/BIP32)
bip39 = "2.0"
bip32 = "0.5"

# HTTP client for blockchain API calls
reqwest = { version = "0.11", features = ["json"] }

# Regex for JSON fixing
regex = "1"
